--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@swimlane/ngx-datatable": "^11.1.2",
     "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
@@ -32,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jszip": "^3.1.5",
+    "papaparse": "^4.3.6",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
