--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@swimlane/ngx-datatable": "^11.1.2",
+    "angular-2-dropdown-multiselect": "^1.6.1",
     "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
