--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jszip": "^3.1.5",
+    "lodash": "^4.17.4",
     "papaparse": "^4.3.6",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
@@ -43,9 +44,14 @@
     "@angular/cli": "1.5.2",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/firebase": "^2.4.32",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.16",
+    "@types/jszip": "^3.1.2",
+    "@types/lodash": "^4.14.85",
     "@types/node": "~6.0.60",
+    "@types/papaparse": "^4.1.31",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
