--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-2-dropdown-multiselect": "^1.6.1",
     "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "^4.0.0-beta.2",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.3",
     "firebase": "^4.6.2",
@@ -35,6 +36,7 @@
     "jquery": "^3.2.1",
     "jszip": "^3.1.5",
     "lodash": "^4.17.4",
+    "ng2-charts": "^1.6.0",
     "papaparse": "^4.3.6",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
@@ -44,6 +46,7 @@
     "@angular/cli": "1.5.2",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/chart.js": "^2.7.0",
     "@types/firebase": "^2.4.32",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
