--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ngrx/effects": "^4.1.1",
+    "@ngrx/store": "^4.1.1",
     "@swimlane/ngx-datatable": "^11.1.2",
     "angular-2-dropdown-multiselect": "^1.6.1",
     "angularfire2": "^5.0.0-rc.4",
@@ -36,6 +38,7 @@
     "jszip": "^3.1.5",
     "lodash": "^4.17.4",
     "ng2-charts": "^1.6.0",
+    "ngrx-store-logger": "^0.2.0",
     "papaparse": "^4.3.6",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
