--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "dev": "concurrently --kill-others \"yarn run dev:watch\" \"yarn run dev:server\"",
+    "dev:watch": "ng build --watch --aot false",
+    "dev:server": "NODE_ENV=dev nodemon server.js",
     "ng": "ng",
     "deploy": "ng build --prod && firebase deploy",
     "start": "ng serve",
@@ -29,11 +32,15 @@
     "@swimlane/ngx-datatable": "^11.1.2",
     "angular-2-dropdown-multiselect": "^1.6.1",
     "angularfire2": "^5.0.0-rc.4",
+    "async": "^2.6.0",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "file-saver": "^1.3.3",
-    "firebase": "^4.6.2",
+    "firebase": "4.8.0",
+    "http-status": "^1.0.1",
     "jquery": "^3.2.1",
     "jszip": "^3.1.5",
     "lodash": "^4.17.4",
@@ -42,10 +49,11 @@
     "papaparse": "^4.3.6",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
+    "watson-developer-cloud": "^3.0.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.2",
+    "@angular/cli": "1.6.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/chart.js": "^2.7.0",
@@ -57,7 +65,9 @@
     "@types/lodash": "^4.14.85",
     "@types/node": "~6.0.60",
     "@types/papaparse": "^4.1.31",
+    "@types/watson-developer-cloud": "^2.40.0",
     "codelyzer": "^4.0.1",
+    "concurrently": "^3.5.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -66,6 +76,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.14.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
