--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ngrx/store": "^4.1.1",
     "@swimlane/ngx-datatable": "^11.1.2",
     "angular-2-dropdown-multiselect": "^1.6.1",
-    "angularfire2": "^5.0.0-rc.4",
+    "angularfire2": "^5.0.0-rc.6",
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
@@ -39,7 +39,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "file-saver": "^1.3.3",
-    "firebase": "4.8.0",
+    "firebase": "^4.9.1",
     "http-status": "^1.0.1",
     "jquery": "^3.2.1",
     "jszip": "^3.1.5",
@@ -53,11 +53,11 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.0",
+    "@angular/cli": "^1.6.7",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/chart.js": "^2.7.0",
-    "@types/firebase": "^2.4.32",
+    "@types/firebase": "^3.2.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.16",
