--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ngrx/effects": "^5.0.1",
+    "@ngrx/entity": "^5.1.0",
     "@ngrx/store": "^5.0.0",
     "@swimlane/ngx-datatable": "^11.1.2",
     "angular-2-dropdown-multiselect": "^1.6.1",
+    "angular-star-rating": "^3.0.8",
     "angularfire2": "^5.0.0-rc.6",
     "async": "^2.6.0",
     "body-parser": "^1.18.2",
@@ -40,6 +42,7 @@
     "express": "^4.16.2",
     "file-saver": "^1.3.3",
     "firebase": "^4.9.1",
+    "hammerjs": "^2.0.8",
     "http-status": "^1.0.1",
     "jquery": "^3.2.1",
     "jszip": "^3.1.5",
