--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@ngrx/store": "^5.0.0",
     "@ngrx/store-devtools": "^5.1.0",
     "@swimlane/ngx-datatable": "^11.1.2",
-    "angular-2-dropdown-multiselect": "^1.6.1",
+    "angular-2-dropdown-multiselect": "1.6.3",
     "angular-star-rating": "^3.0.8",
     "angularfire2": "^5.0.0-rc.6",
     "async": "^2.6.0",
@@ -40,6 +40,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "css-star-rating": "1.1.3",
     "express": "^4.16.2",
     "file-saver": "^1.3.3",
     "firebase": "^4.9.1",
