--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
     "watson-developer-cloud": "^3.0.3",
+    "xlsx": "^0.12.9",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
