--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "css-star-rating": "1.1.3",
     "express": "^4.16.2",
     "file-saver": "^1.3.3",
-    "firebase": "^4.9.1",
+    "firebase": "^4.8.0",
     "hammerjs": "^2.0.8",
     "http-status": "^1.0.1",
     "jquery": "^3.2.1",
+    "jspdf": "^1.3.5",
     "jszip": "^3.1.5",
     "lodash": "^4.17.4",
     "ng2-charts": "^1.6.0",
@@ -65,6 +66,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.16",
+    "@types/jspdf": "^1.1.31",
     "@types/jszip": "^3.1.2",
     "@types/lodash": "^4.14.85",
     "@types/node": "~6.0.60",
