--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "file-saver": "^1.3.3",
     "firebase": "^4.8.0",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-alpha.12",
     "http-status": "^1.0.1",
     "jquery": "^3.2.1",
     "jspdf": "^1.3.5",
@@ -63,6 +64,7 @@
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/chart.js": "^2.7.0",
+    "@types/html2canvas": "^0.0.33",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.16",
