--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@swimlane/ngx-datatable": "^11.1.2",
     "angular-2-dropdown-multiselect": "1.6.3",
     "angular-star-rating": "^3.0.8",
-    "angularfire2": "^5.0.0-rc.6",
+    "angularfire2": "^5.0.0-rc.6.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
@@ -42,7 +42,7 @@
     "css-star-rating": "1.1.3",
     "express": "^4.16.2",
     "file-saver": "^1.3.3",
-    "firebase": "^4.8.0",
+    "firebase": "4.12.1",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "http-status": "^1.0.1",
