--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.0.0-rc0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.0-rc0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@ngrx/effects": "^5.0.1",
-    "@ngrx/entity": "^5.1.0",
-    "@ngrx/store": "^5.0.0",
-    "@ngrx/store-devtools": "^5.1.0",
-    "@swimlane/ngx-datatable": "^11.1.2",
-    "angular-2-dropdown-multiselect": "1.6.3",
+    "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.1.0",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/material": "^6.1.0",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/entity": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
+    "@ngrx/store-devtools": "^6.0.1",
+    "@swimlane/ngx-datatable": "^13.0.0",
+    "angular-2-dropdown-multiselect": "^1.8.0",
     "angular-star-rating": "^3.0.8",
-    "angularfire2": "^5.0.0-rc.6.0",
+    "angularfire2": "^5.0.0-rc.10",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "chart.js": "^2.7.1",
@@ -42,7 +42,7 @@
     "css-star-rating": "1.1.3",
     "express": "^4.16.2",
     "file-saver": "^1.3.3",
-    "firebase": "4.12.1",
+    "firebase": "^5.0.3",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "http-status": "^1.0.1",
@@ -51,18 +51,19 @@
     "jszip": "^3.1.5",
     "lodash": "^4.17.4",
     "ng2-charts": "^1.6.0",
-    "ngrx-store-logger": "^0.2.0",
+    "ngrx-store-logger": "^0.2.1",
     "papaparse": "^4.3.6",
     "popper.js": "^1.12.9",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.2.0",
     "watson-developer-cloud": "^3.0.3",
-    "xlsx": "^0.12.9",
+    "xlsx": "^0.12.13",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.7",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular-devkit/build-angular": "~0.6.3",
+    "@angular/cli": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
     "@types/chart.js": "^2.7.0",
     "@types/html2canvas": "^0.0.33",
     "@types/jasmine": "~2.5.53",
@@ -88,7 +89,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.6.0"
+    "typescript": "~2.7.2"
   },
   "engines": {
     "node": ">=8.9.1"
