--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ngrx/store-devtools": "^6.0.1",
     "@swimlane/ngx-datatable": "^13.0.0",
     "angular-2-dropdown-multiselect": "^1.8.0",
-    "angular-star-rating": "^3.0.8",
+    "angular-star-rating": "^3.0.0",
     "angularfire2": "^5.0.0-rc.10",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
@@ -47,7 +47,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "http-status": "^1.0.1",
     "jquery": "^3.2.1",
-    "jspdf": "^1.3.5",
+    "jspdf": "~1.3.0",
     "jszip": "^3.1.5",
     "lodash": "^4.17.4",
     "ng2-charts": "^1.6.0",
