--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "http-status": "^1.0.1",
     "jquery": "^3.2.1",
+    "json-pollock": "^1.1.7",
     "jspdf": "~1.3.0",
     "jszip": "^3.1.5",
     "lodash": "^4.17.4",
